# image2cli

./: CMakeLists.txt  README.md
app/: image_to_cli.cpp
inc/: utils.hpp
src/: utils.cpp
